# openhands_playground

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/openhands_playground/: __init__.py  calculator.py  example.py
src/openhands_playground/llm/: __init__.py  base.py  factory.py
src/openhands_playground/llm/llms/: __init__.py  mock_llm.py  openai_llm.py
test/: __init__.py  test_calculator.py  test_llm.py  test_openai_integration.py
