[tool.poetry]
name = "openhands_playground"
version = "0.1.0"
description = "OpenHands Playground Project"
authors = ["OpenHands <openhands@all-hands.dev>"]
readme = "README.md"
packages = [{include = "openhands_playground", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.1.6"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "W", "N", "B", "C4", "UP", "ANN", "D", "PT", "RET", "SIM", "ARG"]
ignore = ["D203", "D212", "ANN101"]

[tool.ruff.isort]
known-first-party = ["openhands_playground"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"